2008-03-18  Sam Weinig  <sam@webkit.org>

        Reviewed by Darin Adler.

        - Speed up JavaScript prototype and constructor object creation
          using a static Identifier in the self() methods to avoid the
          cost of creating one from a c-string each time.

        5% speedup for Acid3 test 26

        * bindings/scripts/CodeGeneratorJS.pm:

2008-03-18  Antti Koivisto  <antti@apple.com>

        Reviewed by Mark Rowe.

        Enable preloading for other platforms besides Mac.

        * GNUmakefile.am:
        * WebCore.pro:
        * WebCore.vcproj/WebCore.vcproj:
        * WebCoreSources.bkl:
        * html/HTMLTokenizer.cpp:
        * html/HTMLTokenizer.h:
        * html/PreloadScanner.cpp:
        (WebCore::PreloadScanner::tokenize):

2008-03-18  Dan Bernstein  <mitz@apple.com>

        Reviewed by Adele Peterson.

        - fix <rdar://problem/5805127> REGRESSION (r31116): Assertion failure (floatIndex < floats.size()) in RenderBlock::determineStartPosition() at digg.com

        Test: fast/dynamic/floating-to-positioned.html

        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::setStyle): Added code to remove a float from
        object lists if its position property changes to something other than
        static, since then it ceases to be a float.

2008-03-18  Adam Roben  <aroben@apple.com>

        Windows build fix after r31123

        * plugins/win/PluginViewWin.cpp: Add back MozillaUserAgent.

2008-03-18  Dan Bernstein  <mitz@apple.com>

        Reviewed by Darin Adler.

        - eliminate RenderFlow::m_clear

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::layoutBlock): Removed code to set m_clear.
        (WebCore::RenderBlock::newLine): Added a 'clear' parameter.
        * rendering/RenderBlock.h:
        * rendering/RenderFlow.h:
        (WebCore::RenderFlow::RenderFlow): Removed initialization of m_clear.
        * rendering/bidi.cpp: