@@ -61,6 +61,7 @@
 #include "PlatformMouseEvent.h"
 #include "PluginDatabase.h"
 #include "PluginPackage.h"
+#include "PluginView.h"
 #include "RenderTheme.h"
 #include "SharedBuffer.h"
 #include "SystemTime.h"
@@ -79,6 +80,23 @@ bool PluginPackage::fetchInfo() { notImplemented(); return false; }
 unsigned PluginPackage::hash() const { notImplemented(); return 0; }
 bool PluginPackage::equal(const PluginPackage&, const PluginPackage&) { notImplemented(); return false; }
 bool PluginPackage::load() { notImplemented(); return false; }
+void PluginView::setNPWindowRect(const IntRect&) { notImplemented(); }
+const char* PluginView::userAgent() { notImplemented(); return 0; }
+void PluginView::invalidateRect(NPRect*) { notImplemented(); }
+void PluginView::invalidateRegion(NPRegion) { notImplemented(); }
+void PluginView::forceRedraw() { notImplemented(); }
+void PluginView::setFocus() { Widget::setFocus(); }
+void PluginView::show() { Widget::show(); }
+void PluginView::hide() { Widget::hide(); }
+void PluginView::paint(GraphicsContext*, const IntRect&) { notImplemented(); }
+void PluginView::setParent(ScrollView* view) { Widget::setParent(view); }
+void PluginView::attachToWindow() { notImplemented(); }
+void PluginView::detachFromWindow() { notImplemented(); }
+NPError PluginView::handlePost(const char*, const char*, uint32, const char*, bool, void*, bool, bool) { notImplemented(); return NPERR_GENERIC_ERROR; }
+void PluginView::updateWindow() const { notImplemented(); }
+void PluginView::handleKeyboardEvent(KeyboardEvent*) { notImplemented(); }
+void PluginView::handleMouseEvent(MouseEvent*) { notImplemented(); }
+PluginView::~PluginView() {}
 
 namespace WebCore {
 
